in this code have lots of bug
I don't know how this code run perfectly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,10 @@ set(CMAKE_CXX_STANDARD 11)
 # Check if project name has been specified correctly.
 if((NOT PROJECT_NAME))
   message(FATAL_ERROR "Project name must be specified!")
-endif ((NOT PROJECT_NAME))
+elseif ((NOT PROJECT_NAME))
 if(${PROJECT_NAME} MATCHES " ")
     message(FATAL_ERROR "Project name cannot contain spaces!")
-endif(${PROJECT_NAME} MATCHES " ")
+elseif(${PROJECT_NAME} MATCHES " ")
 
 # Change this section to correspond with your project info.
 project(${PROJECT_NAME} C CXX)
@@ -31,10 +31,10 @@ set(SRC_PATH                                   "${PROJECT_PATH}/src")
 set(TEST_SRC_PATH                              "${PROJECT_PATH}/test")
 if(NOT EXTERNAL_PATH)
   set(EXTERNAL_PATH                            "${PROJECT_PATH}/external")
-endif(NOT EXTERNAL_PATH)
+elseif(NOT EXTERNAL_PATH)
 if(NOT DOXYGEN_PATH)
   set(DOXYGEN_PATH                             "${PROJECT_PATH}/docs")
-endif(NOT DOXYGEN_PATH)
+elseif(NOT DOXYGEN_PATH)
 set(LIB_PATH                                   "${PROJECT_BINARY_DIR}/lib")
 set(LIB_NAME                                   "${PROJECT_NAME}")
 set(BIN_PATH                                   "${PROJECT_BINARY_DIR}/bin")
@@ -46,9 +46,9 @@ OPTION(BUILD_MAIN                              "Build main function"            
 OPTION(BUILD_DOXYGEN_DOCS                      "Build Doxygen docs"             OFF)
 OPTION(BUILD_DEPENDENCIES                      "Force build of dependencies"    OFF)
 
-include(CTest)
+#include(CTest)
 
-include(CMakeDependentOption)
+#include(CMakeDependentOption)
 CMAKE_DEPENDENT_OPTION(BUILD_COVERAGE_ANALYSIS "Build code coverage analysis"   OFF
                                                "BUILD_TESTING"                  OFF)
 
@@ -65,7 +65,7 @@ if(((NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
 elseif((CMAKE_BUILD_TYPE STREQUAL "Debug") OR (BUILD_COVERAGE_ANALYSIS))
     message(STATUS "WARNING: building debug version!")
-endif(((NOT CMAKE_BUILD_TYPE)
+elseif(((NOT CMAKE_BUILD_TYPE)
   AND (NOT BUILD_COVERAGE_ANALYSIS))
   OR (CMAKE_BUILD_TYPE STREQUAL "Release"))
 
@@ -81,26 +81,26 @@ if(WIN32)
       # Find all dynamic runtime (MD) references and replace with static (MT)
       if(${flag_var} MATCHES "/MD")
         string(REGEX REPLACE "/MD" "/MT" ${flag_var} "${${flag_var}}")
-      endif(${flag_var} MATCHES "/MD")
+      elseif(${flag_var} MATCHES "/MD")
     endforeach(flag_var)
   else(MSVC)
     set(CMAKE_CXX_FLAGS
       "${CMAKE_CXX_FLAGS} -Wall -Woverloaded-virtual -Wold-style-cast -Wnon-virtual-dtor")
-  endif(MSVC)
+  elseif(MSVC)
 else(WIN32)
   set(CMAKE_CXX_FLAGS
     "${CMAKE_CXX_FLAGS} -Wall -Woverloaded-virtual -Wold-style-cast -Wnon-virtual-dtor")
-endif(WIN32)
+elseif(WIN32)
 
 if(CMAKE_COMPILER_IS_GNUCXX)
     set(CMAKE_CXX_FLAGS_DEBUG   "-O0 -g3")
     set(CMAKE_CXX_FLAGS_RELEASE "-O3")
     set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage")
-endif(CMAKE_COMPILER_IS_GNUCXX)
+elseif(CMAKE_COMPILER_IS_GNUCXX)
 
-include(Dependencies.cmake)
-include(ProjectFiles.cmake)
-include_directories(AFTER "${INCLUDE_PATH}")
+#include(Dependencies.cmake)
+#include(ProjectFiles.cmake)
+#include_directories(AFTER "${INCLUDE_PATH}")
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIB_PATH})
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_PATH})
@@ -110,7 +110,7 @@ if(BUILD_MAIN)
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_PATH})
   add_executable(${MAIN_NAME} ${MAIN_SRC})
   target_link_libraries(${MAIN_NAME} ${LIB_NAME})
-endif(BUILD_MAIN)
+elseif(BUILD_MAIN)
 
 if(BUILD_DOXYGEN_DOCS)
   find_package(Doxygen)
@@ -118,7 +118,7 @@ if(BUILD_DOXYGEN_DOCS)
   if(NOT DOXYGEN_FOUND)
     message(FATAL_ERROR
             "Doxygen is needed to build the documentation. Please make sure it is installed.")
-  endif(NOT DOXYGEN_FOUND)
+  elseif(NOT DOXYGEN_FOUND)
 
   configure_file(${PROJECT_PATH}/Doxyfile.in
                  ${PROJECT_BINARY_DIR}/Doxyfile @ONLY IMMEDIATE)
@@ -182,7 +182,7 @@ if(NOT TARGET uninstall)
 
     add_custom_target(uninstall
         COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/Uninstall.cmake)
-endif()
+elseif()
 
 # Set up packager.
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "${CMAKE_PROJECT_NAME}")
@@ -200,5 +200,5 @@ if(WIN32 AND NOT UNIX)
   set(CPACK_NSIS_CONTACT              "${CMAKE_PROJECT_NAME}_VENDOR_CONTACT")
   set(CPACK_NSIS_MODIFY_PATH ON)
 else(WIN32 AND NOT UNIX)
-endif(WIN32 AND NOT UNIX)
-include(CPack)
+elseif(WIN32 AND NOT UNIX)
+#include(CPack)
