Make Catch2 find_package optional.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,7 +9,7 @@
 # @TODO: add find_package call to use Catch2 that is already present and only fetch otherwise
 # @TODO: consider only using the Catch2 single header to avoid building the whole library (slow)
 
-find_package(Catch2 3 REQUIRED)
+find_package(Catch2 3)
 if(TARGET Catch2::Catch2)
   message(STATUS "Found Catch2")
 else()
