--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,12 +42,14 @@ configure_file (
     "${PROJECT_BINARY_DIR}/include/${project_name}/version.hpp"
 )
 
-# Add subdirs for sources, and executables
+# Add subdirs for headers, sources, and executables
 # Subdirs contain CMakeLists.txt files with commands to setup build
+# Comment the following line if the library is header-only
 add_subdirectory(src)
-add_subdirectory(apps)
-# Uncomment the following line if the library is header-only and comment 'add_subdirectory(src)' above
+# Uncomment the following line if the library is header-only
 #add_subdirectory(include)
+# Comment the following line if there are no applications in this project
+add_subdirectory(apps)
 
 # Enable testing
 if(BUILD_TESTING)
