--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -11,10 +11,10 @@ jobs:
   run-tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.4.2
-      - name: Setup CMake
-        uses: jwlawson/actions-setup-cmake@v1.12
+      - name: Checkout Project
+        uses: actions/checkout@v4.2.2
+      - name: Build Project
+        uses: threeal/cmake-action@v2.1.0
         with:
           cmake-version: '3.23.x'
       - name: Build CMake project
