Update GitHub Actions script to address problem with compiling Catch2 library.

--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -11,12 +11,12 @@ jobs:
   run-tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Project
-        uses: actions/checkout@v4.2.2
-      - name: Build Project
-        uses: threeal/cmake-action@v2.1.0
-        with:
-          cmake-version: '3.23.x'
+      - name: Checkout project
+        uses: actions/checkout@v4
+      # - name: Build CMake
+      #   uses: threeal/cmake-action@v2.1.0
+      #   with:
+      #     cmake-version: '3.23.x'
       - name: Build CMake project
         run: |
           cmake -S . -B build -DBUILD_TESTING=on
