--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -11,12 +11,12 @@ jobs:
   run-tests:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout project
-        uses: actions/checkout@v4
-      # - name: Build CMake
-      #   uses: threeal/cmake-action@v2.1.0
-      #   with:
-      #     cmake-version: '3.23.x'
+      - name: Checkout
+        uses: actions/checkout@v2.4.2
+      - name: Setup CMake
+        uses: jwlawson/actions-setup-cmake@v1.12
+        with:
+          cmake-version: '3.23.x'
       - name: Build CMake project
         run: |
           cmake -S . -B build -DBUILD_TESTING=on
